Clean up code by following Sonar analysis